# RotomWorker

./: README.md  a.out  build_rotom_worker.sh  go.mod  go.sum  main.cpp  main.go  main_old.cpp  rotom-config.json  rotom_worker  rotom_worker_elf
cpp/: CMakeLists.txt  art_hooks.cpp  art_hooks.h  hook_bridge.cpp  hook_bridge.h  niantic_hooks.cpp  niantic_hooks.h
cpp/shim/: libshim_niantic.cpp
internal/: config.go  control.go  handlers.go  helpers.go  hooks.go  hooks_elf.go  logger.go  queue.go  scanner.go  sender.go  tcp_receiver.go  welcome.go  worker.go  ws_data.go
proto_gen/: rotom.pb.cc  rotom.pb.go  rotom.pb.h
proto_gen/proto_src/: rotom.pb.cc  rotom.pb.h
proto_src/: rotom.proto
scripts/: build_go_android.sh  build_hooks.sh  build_rotom_worker.sh  generate_proto.sh
